GetAll and Get an event
- Get All and get an event
- Give feedback to the useer.

--- a/assets/scripts/templates/event-listing.handlebars
+++ b/assets/scripts/templates/event-listing.handlebars
@@ -10,7 +10,10 @@
           No name provided.
         {{/if}}
       </h3>
-    </div>
+      <h6>ID:</h6>
+      <h3>
+          {{event.id}}
+      </h3>
     <h6>Date:</h6>
     <h3>
       {{#if event.date}}
@@ -35,6 +38,7 @@
         No note provided.
       {{/if}}
     </p>
+  </div>
     <!-- <button class="btn btn-danger" data-id="{{book.id}}">
       Remove
     </button> -->
