--- a/assets/scripts/templates/one-event.handlebars
+++ b/assets/scripts/templates/one-event.handlebars
@@ -8,7 +8,10 @@
         No name provided.
       {{/if}}
     </h3>
-  </div>
+    <h6>ID:</h6>
+    <h3>
+        {{event.id}}
+    </h3>
   <h6>Date:</h6>
   <h3>
     {{#if event.date}}
@@ -33,6 +36,15 @@
       No note provided.
     {{/if}}
   </p>
+  <h6>ID:</h6>
+  <p>
+    {{#if event.id}}
+      {{event.id}}
+    {{else}}
+      No note provided.
+    {{/if}}
+  </p>
+</div>
   <!-- <button class="btn btn-danger" data-id="{{book.id}}">
     Remove
   </button> -->
