--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,6 +1,7 @@
 @import '~bootstrap/scss/bootstrap';
 @import './theme.scss';
 @import './modal.scss';
+@import './loginsignupform.scss';
 .hide {
   display: none;
 }
