--- a/assets/scripts/templates/one-event.handlebars
+++ b/assets/scripts/templates/one-event.handlebars
@@ -1,5 +1,9 @@
 <section data-id="{{event.id}}">
   <div class="item">
+    <h6>ID:</h6>
+    <h3>
+        {{event.id}}
+    </h3>
     <h6>Name:</h6>
     <h3>
       {{#if event.name}}
@@ -8,9 +12,13 @@
         No name provided.
       {{/if}}
     </h3>
-    <h6>ID:</h6>
+    <h6>Place:</h6>
     <h3>
-        {{event.id}}
+      {{#if event.place}}
+        {{event.place}}
+      {{else}}
+        No place provided.
+      {{/if}}
     </h3>
   <h6>Date:</h6>
   <h3>
@@ -48,5 +56,5 @@
   <!-- <button class="btn btn-danger" data-id="{{book.id}}">
     Remove
   </button> -->
-  <button data-id="{{event.id}}" class="edit-button">EDIT EVENT!</button>
-  <button data-id="{{event.id}}" class="remove-button">DELETE EVENT!</button>
+  <button data-id="{{event.id}}" class="edit-button button button-block small">EDIT EVENT!</button>
+  <button data-id="{{event.id}}" class="remove-button button button-block small">DELETE EVENT!</button>
