--- a/assets/styles/modal.scss
+++ b/assets/styles/modal.scss
@@ -18,6 +18,7 @@
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
+  opacity: 0.8;
   width: 80%; /* Could be more or less, depending on screen size */
 }
 
