--- a/assets/scripts/templates/event-listing.handlebars
+++ b/assets/scripts/templates/event-listing.handlebars
@@ -1,7 +1,7 @@
 {{#each events as |event|}}
   {{log event}}
   <section data-id="{{event.id}}">
-    <div class="item">
+    <div class="item basicBox" >
       <h6>ID:</h6>
       <h3>
           {{event.id}}
