--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -2,6 +2,7 @@
 @import './theme.scss';
 @import './modal.scss';
 @import './loginsignupform.scss';
+@import './title.scss';
 .hide {
   display: none;
 }
