--- a/assets/scripts/templates/event-listing.handlebars
+++ b/assets/scripts/templates/event-listing.handlebars
@@ -1,5 +1,5 @@
 {{#each events as |event|}}
-  <section data-id="{{event.id}}">
+  <section data-id="{{event.id}}" >
     <div class="item basicBox" >
       <h6>ID:</h6>
       <h3>
@@ -13,6 +13,7 @@
           No name provided.
         {{/if}}
       </h3>
+
       <h6>Place:</h6>
       <h3>
         {{#if event.place}}
@@ -21,14 +22,25 @@
           No place provided.
         {{/if}}
       </h3>
-    <h6>Date:</h6>
-    <h3>
-      {{#if event.date}}
-        {{event.date}}
+      <h6>Date:</h6>
+      {{#if (isOverdue event.date)}}
+        <h3 style="color:red">
+          {{#if event.date}}
+            {{event.date}}
+          {{else}}
+            No date provided.
+          {{/if}}
+        </h3>
       {{else}}
-        No date provided.
+      <h3>
+        {{#if event.date}}
+          {{event.date}}
+        {{else}}
+          No date provided.
+        {{/if}}
+      </h3>
       {{/if}}
-    </h3>
+
     <h6>Duration:</h6>
     <h3>
       {{#if event.duration}}
@@ -45,6 +57,7 @@
         No note provided.
       {{/if}}
     </p>
+
   </div>
     <!-- <button class="btn btn-danger" data-id="{{book.id}}">
       Remove
