--- a/assets/scripts/templates/event-listing.handlebars
+++ b/assets/scripts/templates/event-listing.handlebars
@@ -1,5 +1,5 @@
 {{#each events as |event|}}
-  <section data-id="{{event.id}}" >
+  <section data-id="{{event.id}}" class="{{#if (isOverdue event.date)}}redSection{{/if}}">
     <div class="item basicBox" >
       <h6>ID:</h6>
       <h3>
