--- a/assets/scripts/templates/one-event.handlebars
+++ b/assets/scripts/templates/one-event.handlebars
@@ -1,4 +1,4 @@
-<section data-id="{{event.id}}">
+<section data-id="{{event.id}}" class="{{#if (isOverdue event.date)}}redSection{{/if}}">
   <div class="item">
     <h6>ID:</h6>
     <h3>
@@ -20,14 +20,24 @@
         No place provided.
       {{/if}}
     </h3>
-  <h6>Date:</h6>
-  <h3>
-    {{#if event.date}}
-      {{event.date}}
+    <h6>Date:</h6>
+    {{#if (isOverdue event.date)}}
+      <h3 style="color:red">
+        {{#if event.date}}
+          {{event.date}}
+        {{else}}
+          No date provided.
+        {{/if}}
+      </h3>
     {{else}}
-      No date provided.
+    <h3>
+      {{#if event.date}}
+        {{event.date}}
+      {{else}}
+        No date provided.
+      {{/if}}
+    </h3>
     {{/if}}
-  </h3>
   <h6>Duration:</h6>
   <h3>
     {{#if event.duration}}
